<resources>
    <string name="app_name">PlatziGram3</string>
    <string name="title_activity_reference">ReferenceActivity</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Login</string>
    <string name="dont_have_account">¿No tienes cuenta?, </string>
    <string name="create_here">Crea una aquí</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_confirm_password">Confirmar contraseña</string>
    <string name="text_button_create_account">Únete</string>
    <string name="toolbar_title_create_account">Crear cuenta</string>
    <string name="my_name">Yonatan Daniel</string>
    <string name="firstword_card">Hace</string>
    <string name="timecard_card">4 días</string>
    <string name="picturecard_description">Imagen de prueba</string>
    <string name="likenumbercard_card">10 Me Gusta</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">Yo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="secondword_detail">Me gusta</string>
    <string name="likenumber_detail">10</string>
    <string name="titleimage_detail">\"Todo en la playa\"</string>
    <string name="lorem">Lorem ipsum dolor sit amet, varius gravida, nisl eget. Nulla purus in, erat phasellus phasellus, pede maecenas tempor. Augue rutrum eu, amet eget ut. Velit magnis magna, tortor in quis, penatibus suspendisse est. Maecenas metus.</string>
    <string name="transitionname_picture">transitionName</string>
</resources>
