<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pictureCard"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview"
    cardview:cardCornerRadius="@dimen/cornerradius_cardview"
    android:layout_marginBottom="@dimen/activity_vertical_margin">
    <!-- FrameLayout => uno encima de otro -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- ImageView-->
        <ImageView
            android:id="@+id/image_pictureCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_cardview"
            android:background="@drawable/image"
            android:scaleType="centerCrop"
            android:contentDescription="@string/picturecard_description"
            android:transitionName="@string/transitionname_picture"/>
        <!-- END - ImageView-->
        <!-- LinearLayout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="bottom"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:background="@color/backgroundText_card">
                <!-- Usuario -->
                <TextView
                    android:id="@+id/usernameCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_name"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsize_username_card"/>
                <!-- END - Usuario -->
                <!-- LinearLayout para el subtítulo -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <!-- Primera palabra -->
                    <TextView
                        android:id="@+id/firsWord"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/firstword_card"
                        android:textColor="@android:color/white"/>
                    <!-- END - Primera palabra -->
                    <!-- Texto de tiempo -->
                    <TextView
                        android:id="@+id/timeCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/timecard_card"
                        android:textColor="@android:color/white"
                        android:layout_marginLeft="@dimen/timecard_margin_left"
                        android:layout_marginRight="@dimen/timecard_margin_left"/>
                    <!-- END - Texto de tiempo -->
                </LinearLayout>
                <!-- END - LinearLayout para el subtítulo -->
                <!-- LinearLayout para likes -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/like_margintop_card">
                    <!-- Checkbox para el like -->
                    <CheckBox
                        android:id="@+id/likeCheckCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/checkbox_selector"/>
                    <!-- END - Checkbox para el like -->
                    <!-- Cantidad de likes -->
                    <TextView
                        android:id="@+id/likesNumberCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/likenumbercard_card"
                        android:textColor="@android:color/white"
                        android:layout_marginLeft="@dimen/timecard_margin_left"
                        android:layout_marginRight="@dimen/timecard_margin_left"/>
                    <!-- END - Cantidad de likes -->
                </LinearLayout>
                <!-- END - LinearLayout para likes -->
            </LinearLayout>
        <!-- END - LinearLayout -->
    </FrameLayout>
    <!-- END - FrameLayout => uno encima de otro -->
</android.support.v7.widget.CardView>