<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CreateAccountActivity">
    <!-- Toolbar -->
    <include layout="@layout/actionbar_toolbar" />
    <!-- END - Toolbar -->
    <!-- Scroll view -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <!-- Linear layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_vertical_margin"
            android:orientation="vertical">
            <!-- Correo -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextColorBlack"
                android:layout_marginTop="@dimen/edittext_margin_create_account">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"/>
            </android.support.design.widget.TextInputLayout>
            <!-- END - Correo -->
            <!-- Nombre -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextColorBlack"
                android:layout_marginTop="@dimen/edittext_margin_create_account">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"/>
            </android.support.design.widget.TextInputLayout>
            <!-- END - Nombre -->
            <!-- Usuario -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextColorBlack"
                android:layout_marginTop="@dimen/edittext_margin_create_account">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_user"/>
            </android.support.design.widget.TextInputLayout>
            <!-- END - Usuario -->
            <!-- Password -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextColorBlack"
                android:layout_marginTop="@dimen/edittext_margin_create_account">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password_create_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>
            <!-- END - Password -->
            <!-- Confirm Password -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextColorBlack"
                android:layout_marginTop="@dimen/edittext_margin_create_account">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>
            <!-- END - Confirm Password -->
            <!-- Botón -->
            <Button
                android:id="@+id/joinUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_button_create_account"
                android:theme="@style/RaiseButtonDark"/>
            <!-- END - Botón -->
        </LinearLayout>
        <!-- END - Linear layout -->
    </ScrollView>
    <!-- END - Scroll view -->
</android.support.design.widget.CoordinatorLayout>