<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PictureDetailActivity">
    <!-- AppBar => COPIADO del activity_reference-->
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbarlayout_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <!-- CollapsingLayout ==> Al hacer slice, colapsar el toolbar -->
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary">
            <!-- ImageView -->
            <ImageView
                android:id="@+id/imageHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:background="@drawable/image"
                app:layout_collapseMode="parallax"
                android:transitionName="@string/transitionname_picture"/>
            <!-- END - ImageView -->
            <!-- Toolbar-->
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"/>
            <!-- END - Toolbar-->
        </android.support.design.widget.CollapsingToolbarLayout>
        <!-- END - CollapsingLayout -->
    </android.support.design.widget.AppBarLayout>
    <!-- END - AppBar -->
    <!-- Contenido o información -->
    <!-- NestedScrollView -->
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <!-- LinearLayout - Nombre de usuario -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin">
            <!-- TextView -->
            <TextView
                android:id="@+id/usernameDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_usernamedetail"
                android:text="@string/my_name"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"/>
            <!-- END - TextView -->
            <!-- LinearLayout - Cantidad de likes -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">
                <!-- TextView - cantidad -->
                <TextView
                    android:id="@+id/likeNumberDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_likenumberdetail"
                    android:text="@string/likenumber_detail" />
                <!-- END - TextView - cantidad -->
                <!-- TextView - Descripción -->
                <TextView
                    android:id="@+id/secondWordDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_likenumberdetail"
                    android:text="@string/secondword_detail"
                    android:layout_marginLeft="@dimen/marginleft_secondword"/>
                <!-- END - TextView - Descripción -->
            </LinearLayout>
            <!-- END - LinearLayout - Cantidad de likes -->
            <!-- Dividor
            <view
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_divider"
                android:background="@android:color/darker_gray"/>-->
            <!-- END - Dividor -->
            <!-- TextView - Título -->
            <TextView
                android:id="@+id/titleImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_likenumberdetail"
                android:text="@string/titleimage_detail"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:paddingTop="@dimen/paddingtop_titleimagedetail"/>
            <!-- END - TextView - Título -->
            <!-- TextView - contenido -->
            <TextView
                android:id="@+id/textContentImageDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_likenumberdetail"
                android:text="@string/lorem"
                android:layout_gravity="center_horizontal"
                android:paddingTop="@dimen/paddingtop_titleimagedetail"
                android:paddingLeft="@dimen/padding_horizontal_textcontentdetail"
                android:paddingRight="@dimen/padding_horizontal_textcontentdetail"/>
            <!-- END - TextView - Título -->
        </LinearLayout>
        <!-- END - LinearLayout - Nombre de usuario -->
    </android.support.v4.widget.NestedScrollView>
    <!-- END - NestedScrollView -->
    <!-- END - Contenido o información -->
    <!-- Botón flotante -->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/heart"
        app:layout_anchor="@+id/appbar"
        app:layout_anchorGravity="bottom|end"/>
    <!-- END - Botón flotante -->
</android.support.design.widget.CoordinatorLayout>